--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve -l -H localhost`. If you change this file, please restart the 
 # server process.
-theme : "jekyll-theme-minimal"
+#theme : "jekyll-theme-minimal"
 
 # Basic Site Settings
 locale                   : "en-US"
@@ -14,8 +14,8 @@ title_separator          : "-"
 name                     : &name "ashish aka tp53"
 description              : &description "personal description"
 url                      : https://inventcures.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "index.html" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+baseurl                  :  # the subpath of your site, e.g. "/blog"
+repository               : "inventcures/inventcures.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
