--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve -l -H localhost`. If you change this file, please restart the 
 # server process.
 #theme : "jekyll-theme-minimal"
-remote_theme: academicpages/academicpages
+#remote_theme: academicpages/academicpages
 
 # Basic Site Settings
 locale                   : "en-US"
