--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ name                     : &name "ashish aka tp53"
 description              : &description "personal description"
 url                      : https://inventcures.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "inventcures/inventcures.github.io"
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
