--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve -l -H localhost`. If you change this file, please restart the 
 # server process.
-#theme : "jekyll-theme-minimal"
-remote_theme: "academicpages/academicpages"
+theme: "jekyll-theme-minimal"
+#remote_theme: "academicpages/academicpages"
 
 # Basic Site Settings
 locale                   : "en-US"
