--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "tp53" # Replace this with you Bluesky username
+  bluesky          : "tp53.bsky.social" # Replace this with you Bluesky username
   linkedin         : "tp53"
   twitter          : "inventcures" # Username for X / Twitter
   
